--- a/Admin-front-end/views/add-product.html
+++ b/Admin-front-end/views/add-product.html
@@ -43,6 +43,7 @@
         <div class="grid" id="productDiv">
             
         </div>
+       <ul id="pages" class="pagination"></ul>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"></script>
     <script src="../DOM/app.js" type="module"> </script>
