--- a/front end/css/home.css
+++ b/front end/css/home.css
@@ -268,6 +268,7 @@ section h2{
 }
 footer{
     display:flex;
+    position: fixed;
     margin-top:40px;
     padding:20px;
     background: #56CCF2;
@@ -439,3 +440,35 @@ header ul a{
     border-radius:7px;
     padding:5px;
 }
+.pagination{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+   }
+   .pagination li{
+     list-style: none;
+     padding: 0.2rem;
+   }
+   .pagination li button{
+     appearance: none;
+     border: none;
+     outline: none;
+     cursor: pointer;
+     transition: 0.4s;
+   
+   }
+   .pagination li button:hover{
+     background-color: #a5b5b2;
+     border: none;
+     width: 2rem;
+     height: 2rem;
+   
+   }
+   .pagination li button.active{
+     background-color: #a5b5b2;
+     border: none;
+     width: 2rem;
+     height: 2rem;
+   }
+   
