--- a/front end/view/store.html
+++ b/front end/view/store.html
@@ -61,34 +61,9 @@
                     </div>
                 </div> -->
             </div>
-
+            <ul id="pages" class="pagination"></ul>
         </section>
-        <section id="merch" class="container">
-            <h2>MERCH</h2>
-            <div id="merch-content">
-                <div id="t-shirt">
-                    <h3>T-Shirt</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="./img/Shirt.png" alt="">
-                    </div>
-                                <div class="prod-details">
-                        <span>$<span>19.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-                <div id="coffee-cup">
-                    <h3>Coffee Cup</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="./img/Cofee.png" alt="">
-                    </div>
-                                <div class="prod-details">
-                        <span>$<span>6.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-            </div>
-
-        </section>
+       
         <section id="cart" class="container">
             <h2>CART</h2>
             <button class="cancel">X</button>
@@ -98,28 +73,7 @@
                 <span class='cart-quantity cart-column'>QUANTITY</span>
             </div>
             <div class='cart-items'>
-                <!-- <div class="cart-row">
-                    <span class='cart-item cart-column'>
-                        <img class='cart-img' src="img/Shirt.png" alt="">
-                        <span>T-Shirt</span>
-                    </span>
-                    <span class='cart-price cart-column'>$19.99</span>
-                    <span class='cart-quantity cart-column'>
-                        <input type="text">
-                        <button>REMOVE</button>
-                    </span>
-                </div>
-                <div class="cart-row">
-                    <span class='cart-item cart-column'>
-                        <img class='cart-img' src="/img/Album 3.png" alt="">
-                        <span>Album 3</span>
-                    </span>
-                    <span class='cart-price cart-column'>$9.99</span>
-                    <span class='cart-quantity cart-column'>
-                        <input type="text">
-                        <button>REMOVE</button>
-                    </span>
-                </div> -->
+                
             </div>
             <div class="cart-total">
                 <span>
@@ -131,11 +85,11 @@
             <button class='purchase-btn' type='button'>PURCHASE</button>
         </section>
 
-        <button class="cart-btn-bottom"> <a href="#cart" class="cart-bottom">See the cart</a></button>
+        <!-- <button class="cart-btn-bottom"> <a href="#cart" class="cart-bottom">See the cart</a></button>
     </div>
-    <!-- Toggle notification -->
-    <div id="container"></div>
-    <footer>
+    Toggle notification
+    <div id="container"></div> -->
+    <!-- <footer>
         <div class="footer-title">
             The Generics
         </div>
@@ -152,7 +106,7 @@
                 </a></li>
             </ul>
         </div>
-    </footer>
+    </footer> -->
     <script src="../app.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"></script>
 </body>
