--- a/user-front-end/view/home.html
+++ b/user-front-end/view/home.html
@@ -13,7 +13,9 @@
         <ul>
             <li><a href="#">HOME</a></li>
             <li><a href="./store.html">STORE</a></li>
-            <li><a href="./about.html">ABOUT</a></li>
+            <li><a href="./about.html">ORDERS</a></li>
+            <li><a href="./orders.html">ABOUT</a></li>
+           
         </ul>
         <h1>The Generics</h1>
         <button class="latest-album">Get our Latest Album</button>
